updated media screen and max device width 480 to fix some issues while playing the game on mobile device. Issues included positiioning of the gifs and unorganized orientation of the answers.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,8 +67,11 @@ iframe{
     }
     iframe{
         position:relative;
-        right:80px;
-        margin:0px;
+        right:40px;
+        margin:30px;
+    }
+    input{
+        font-size:15px;
     }
 
 } 
